
--------------------------------------------------------------------------------
Changes for 2.4.3rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese and Slovak translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)

Bug fixes:
.......PS. [ZBX-8882] fixed message logging on DB2 errors (igors)
.......PS. [ZBX-8992] made Zabbix prefer the threshold sensor over a discrete sensor, in case both are available under the same name (asaveljevs)
...G...... [ZBX-8506] fixed memory leak in wmi.get[]; thanks to Pedro Nunes for patch (asaveljevs)
.......PS. [ZBX-9016] fixed items not being processed again in case these items or their hosts are disabled and then reenabled (asaveljevs, Sasha)
A.F....... [ZBX-9065] fixed default value for screens_items.max_columns in PHP schema (Krists)
..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
A......... [ZBX-8486] fixed re-linking templates with web scenarios (Krists)
..F....... [ZBX-8863] fixed ad-hoc graphs with multiple items for the same host not showing the hosts name (arvids)
..F....... [ZBX-8919] fixed range selection in graphs in IE10 and IE11 (arvids)
A......... [ZBX-9017] fixed hostgroup.create and hostgroup.update API calls allowing setting readonly "internal" param (arvids)
..F....... [ZBX-9004] fixed visible corners in table cells in eventlog history (arvids)
..F....... [ZBX-8928] fixed history-related macros to obey the ZBX_HISTORY_PERIOD (arvids)
...G...PS. [ZBX-8926] fixed bug in JSON parser that caused failures in data retrieval if the target buffer and the decoded data were the same size (Juris)
........S. [ZBX-8952] fixed bug where an action condition of matching parent templates of a trigger worked with only the first template (Juris)
.......PS. [ZBX-8982] turned strict OID validation off for single-variable SNMP requests (asaveljevs)